# pixi_swig_py

./: .gitignore  CMakeLists.txt  README.md  pixi.toml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  example.py
cmake/: CMakeLists.txt  pixi.toml  setup.py  test_c_arrays2.py
simple/: build.sh  c_arrays.i  setup.py  test_c_arrays.py
src/: example.c  example.h  example.i
tests/: test_example.py
